--- a/css/style.css
+++ b/css/style.css
@@ -7,22 +7,36 @@ body{
 .cabecalho {
 	background:#0082c7;
 	color:#fff;
-	text-align:center;
-	padding:5px;
 	
 }
+
 .cartao {
 	background:#ebef40;
 	margin:16px;
 	padding:16px;
 }
+
+.novo-cartao {
+ border: 2px solid #F2F2F2;
+ background:#F2F2F2;
+}
+.novo-cartao:hover{
+	background:#b1b351;
+	color:#fff;
+}
+
 .container {
 	padding: 0 10%;
 }
 
 
-
+#mudaLayout {
+	display:none;
+}
 @media(min-width:560px){
+#mudaLayout {
+	display:inline-block;
+}
 .cartao {
     display: inline-block;
     width:190px;
