--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body{
 	margin:16px;
 	padding:16px;
 }
-
+/*
 .novo-cartao {
  border: 2px solid #F2F2F2;
  background:#F2F2F2;
@@ -24,7 +24,7 @@ body{
 	background:#b1b351;
 	color:#fff;
 }
-
+*/
 .container {
 	padding: 0 10%;
 }
