--- a/app/css/novoCartao.css
+++ b/app/css/novoCartao.css
@@ -26,11 +26,8 @@
 	resize: none;
 	width: 100%;
 	transition: height .1s linear;
-}
+} 
 
-.novoCartao-conteudo:focus {
-	height: 7em
-}
 
 .novoCartao-salvar {
 	font-size: 1em;
@@ -40,3 +37,9 @@
 	padding: .35em 1em;
 	background: rgba(70,20,170,.25);
 }
+
+/*
+.novoCartao-conteudo:focus {
+	height: 7em
+}
+*/
