--- a/app/css/cartao.css
+++ b/app/css/cartao.css
@@ -9,19 +9,41 @@
 	box-shadow: 1px 1px 1px rgba(0,0,0,.1);
 }
 
+.cartao--some{
+    opacity: 0;
+    transition: 0.2s ease-in;
+}
+
 @media (min-width: 560px){
 
-	.cartao {
+.cartao {
 		flex-grow: 1;
 		display: inline-block;
 		text-align: left;
 		box-sizing: border-box;
 		vertical-align: top;
 	}
+.cartao--textoPequeno {
+	font-size:1em;
+	width:11em;
+	flex-basis:11em;
+}
+
+.cartao--textoMedio {
+	font-size:1.5em;
+	width:9em;
+	flex-basis:9em;
+}
+
+.cartao--textoGrande {
+	font-size:2em;
+	width:6em;
+	flex-basis:16em;
 
 }
 
-.cartao--some{
-    opacity: 0;
-    transition: 0.2s ease-in;
+
+
+
 }
+
